Fix overflow list kind questions when create quiz

--- a/mean/public/assets/less/_thanhvk.less
+++ b/mean/public/assets/less/_thanhvk.less
@@ -32,3 +32,8 @@
     display: none;
   }
 }
+
+.quiz-tab-content {
+  min-height:300px;
+  overflow: initial;
+}
